Fix height when displaying trial message

--- a/client/blocks/importer/wordpress/upgrade-plan/style.scss
+++ b/client/blocks/importer/wordpress/upgrade-plan/style.scss
@@ -62,7 +62,7 @@ $business-plan-color: #7f54b3;
 			margin-right: 0;
 			margin-left: 0;
 			width: 324px;
-			height: 400px;
+			min-height: 400px;
 		}
 	}
 
