--- a/client/blocks/importer/wordpress/upgrade-plan/style.scss
+++ b/client/blocks/importer/wordpress/upgrade-plan/style.scss
@@ -40,6 +40,32 @@ $business-plan-color: #7f54b3;
 				}
 			}
 		}
+
+		&.is-not-eligible-for-trial-plan {
+			.import__upgrade-plan-features-container {
+				@include break-medium {
+					height: initial;
+				}
+			}
+
+			.import__upgrade-plan-hosting-details {
+				@include break-medium {
+					margin-top: 12px;
+				}
+			}
+		}
+
+		&.is-not-eligible-for-trial-plan:not(.feature-list-expanded) {
+			.import__upgrade-plan-hosting-details {
+				@include break-medium {
+					margin-top: 27px;
+					height: 392px;
+					margin-bottom: 27px;
+					padding-top: 32px;
+					padding-bottom: 32px;
+				}
+			}
+		}
 	}
 
 	.import__upgrade-plan-features-container {
