--- a/client/components/domains/register-domain-step/style.scss
+++ b/client/components/domains/register-domain-step/style.scss
@@ -161,6 +161,15 @@
 	@include break-xlarge {
 		margin: 0;
 	}
+
+	&--stacked {
+		flex-direction: column;
+		align-items: start;
+
+		svg {
+			float: left;
+		}
+	}
 }
 
 .register-domain-step__placeholder.empty-content {
