--- a/client/my-sites/patterns/components/pattern-preview/style.scss
+++ b/client/my-sites/patterns/components/pattern-preview/style.scss
@@ -125,12 +125,12 @@
 	flex-direction: column-reverse;
 
 	.pattern-preview__header {
+		align-items: center;
 		min-height: auto;
 	}
 
 	.pattern-preview__title {
-		padding-top: 8px;
-
+		padding-top: 0;
 		@include break-huge {
 			font-size: rem(20px);
 		}
