Update frequency form control to support row and column layouts

--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -4,6 +4,7 @@
 	}
 
 	.form-control-container {
+		box-sizing: border-box;
 		padding: 1.5rem;
 		border: solid 1px var(--studio-gray-10);
 		border-radius: 2px;
