--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-footer/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-footer/style.scss
@@ -1,4 +1,4 @@
-.site-preview__footer {
+.item-preview__footer {
 	height: 48px;
 	background-color: var(--color-light-backdrop);
 	padding: 32px 48px;
