--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-header/style.scss
@@ -1,24 +1,24 @@
 @import "@wordpress/base-styles/breakpoints";
 
-.site-preview__header {
+.item-preview__header {
 
 	@media ( min-width: $break-large ) {
-		.site-preview__header-favicon {
+		.item-preview__header-favicon {
 			margin-right: 24px;
 			position: relative;
 		}
 
-		.site-preview__header-content {
+		.item-preview__header-content {
 			padding: 48px 48px 24px 48px;
 			display: flex;
 			align-items: center;
 
-			.site-preview__header-title-summary {
+			.item-preview__header-title-summary {
 				flex-grow: 1;
 				display: flex;
 				flex-direction: column;
 
-				.site-preview__header-title {
+				.item-preview__header-title {
 					font-style: normal;
 					font-weight: 500;
 					font-size: rem(32px);
@@ -27,7 +27,7 @@
 					margin-bottom: 4px;
 				}
 
-				.site-preview__header-summary {
+				.item-preview__header-summary {
 
 					.site-preview__header-summary-link {
 						display: flex;
@@ -55,17 +55,17 @@
 			border-radius: 2px;
 		}
 
-		.site-preview__header-content {
+		.item-preview__header-content {
 			flex-grow: 1;
 			display: flex;
 			justify-content: space-between;
-			.site-preview__header-title-summary {
+			.item-preview__header-title-summary {
 				word-wrap: anywhere;
 				flex-grow: 1;
 				display: flex;
 				flex-direction: column;
 
-				.site-preview__header-title {
+				.item-preview__header-title {
 					font-style: normal;
 					font-weight: 500;
 					font-size: rem(16px);
@@ -74,7 +74,7 @@
 					margin-bottom: 4px;
 				}
 
-				.site-preview__header-summary {
+				.item-preview__header-summary {
 
 					.site-preview__header-summary-link {
 						display: flex;
