Moving word-wrap CSS property outside of a media query, so it covers all screen widths

--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-header/style.scss
@@ -2,6 +2,13 @@
 
 .site-preview__header {
 
+	.site-preview__header-content {
+		.site-preview__header-title-summary {
+			word-wrap: anywhere;
+		}
+
+	}
+
 	@media ( min-width: $break-large ) {
 		.site-preview__header-favicon {
 			margin-right: 24px;
@@ -60,7 +67,6 @@
 			display: flex;
 			justify-content: space-between;
 			.site-preview__header-title-summary {
-				word-wrap: anywhere;
 				flex-grow: 1;
 				display: flex;
 				flex-direction: column;
