--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -478,6 +478,8 @@
 		}
 
 		.dataviews-wrapper {
+			padding-top: 2px;
+
 			.components-button:focus:not(:disabled) {
 				box-shadow: 0 0 0 2px var(--color-primary-light);
 			}
@@ -499,7 +501,7 @@
 			background: var(--color-light-backdrop);
 
 			.sites-overview__content {
-				margin-top: 24px;
+				margin-top: 22px;
 
 				&.is-hiding-navigation {
 					margin-top: 48px; // If there is no navigation bar we need to add a bigger margin.
