Fix search control size issue

--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -63,6 +63,10 @@
 			border: solid 1px var(--studio-gray-10);
 			background-color: var(--studio-white);
 		}
+
+		.components-base-control__field {
+			display: block !important;
+		}
 	}
 
 	.checkbox-options-container {
