Implement Tipalti Account Status API

--- a/client/a8c-for-agencies/sections/referrals/primary/referrals-overview/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/primary/referrals-overview/style.scss
@@ -14,3 +14,7 @@
 .referrals-layout .a4a-layout__body-wrapper {
 	max-width: 900px;
 }
+
+.referrals-overview__section-container .a4a-text-placeholder {
+	height: 80px;
+}
