--- a/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
@@ -70,8 +70,11 @@
 		}
 	}
 
-	.badge {
+	.step-section-item__status-wrapper {
 		margin-left: auto;
+	}
+
+	.badge {
 		white-space: nowrap;
 	}
 
@@ -79,9 +82,15 @@
 		background-color: var(--color-success-5);
 		color: var(--color-success-80);
 	}
+
 	.badge--warning {
 		background-color: var(--color-warning-5);
 		color: var(--color-warning-80);
+	}
+
+	.badge--error {
+		background-color: var(--color-error-5);
+		color: var(--color-error-80);
 	}
 }
 
