--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -13,6 +13,10 @@
 		border-radius: 2px;
 	}
 
+	.validation-msg {
+		margin: 0.5rem 0;
+	}
+
 	.components-text-control__input {
 		border-color: var(--studio-gray-10);
 	}
@@ -129,7 +133,6 @@
 	.radio-option {
 		padding: 1.5rem;
 		flex-basis: 100%;
-		margin-bottom: 0.5rem !important;
 
 		.form-field--frequency-container {
 			flex-direction: column;
@@ -210,6 +213,8 @@
 		}
 
 		.new-path {
+			margin-bottom: 0.75rem;
+
 			.components-input-control__backdrop {
 				border-color: var(--studio-gray-10);
 			}
