Add styles for dismissible notices

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -546,7 +546,8 @@ $font-size: rem(14px);
 		.upsell-nudge.banner.card.is-compact {
 			margin-top: 0;
 			padding: 8px;
-			cursor: pointer;
+			display: flex;
+			flex-direction: column-reverse;
 
 			.banner__content {
 				padding: 0;
@@ -563,8 +564,9 @@ $font-size: rem(14px);
 			.banner__action {
 				width: 100%;
 				margin-top: 0;
+				margin-right: 0;
 
-				button {
+				.button {
 					width: 100%;
 					/* stylelint-disable-next-line scales/font-sizes */
 					font-size: 0.8125rem;
@@ -574,6 +576,43 @@ $font-size: rem(14px);
 					margin-bottom: 0;
 					padding-top: 0;
 					padding-bottom: 0;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					border-radius: 3px;
+				}
+			}
+
+			.dismissible-card__close-button {
+				position: relative;
+				width: 100%;
+				height: auto;
+				top: auto;
+				right: auto;
+				margin-top: 4px;
+				margin-right: 0;
+				font-size: 0.75rem;
+				line-height: 16px;
+				color: var(--studio-black);
+
+				&::before {
+					content: attr(aria-label);
+					text-decoration: underline;
+				}
+
+				svg {
+					display: none;
+				}
+			}
+		}
+	}
+
+	&.is-classic-bright,
+	&.is-contrast {
+		.is-unified-site-sidebar-visible {
+			.dismissible-card__close-button {
+				&::before {
+					color: var(--color-text-inverted);
 				}
 			}
 		}
@@ -701,7 +740,16 @@ $font-size: rem(14px);
 
 		.is-unified-site-sidebar-visible {
 			.upsell-nudge.banner.card.is-compact {
-				margin-top: 0;
+				margin: 0 4px 4px;
+				padding: 4px;
+
+				&::before {
+					margin: 0;
+				}
+
+				.dismissible-card__close-button {
+					display: none;
+				}
 			}
 		}
 
@@ -1016,6 +1064,12 @@ $font-size: rem(14px);
 		.sidebar {
 			position: absolute;
 			padding-bottom: 120px;
+		}
+
+		.is-unified-site-sidebar-visible {
+			.upsell-nudge.banner.card.is-compact {
+				margin-top: 8px;
+			}
 		}
 	}
 }
