--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -262,20 +262,32 @@ a.hosting-overview__link-button {
 }
 
 .hosting-overview__domains-table {
+	font-family: "SF Pro Text", $sans;
 	padding: 0;
+
+	button {
+		font-family: "SF Pro Text", $sans;
+	}
 
 	.domains-table__primary-domain-label {
 		background-color: inherit;
 		color: var(--studio-green-40, #00a32a);
 		font-family: "SF Pro", $sans;
-		font-size: $font-body-small;
+		font-size: $font-body-extra-small;
 		font-weight: 500;
 		line-height: 20px;
+		margin: 0;
 		padding: 0;
 
 		svg {
 			display: none;
 		}
+	}
+
+	.domains-table__domain-name {
+		font-size: $font-body-small;
+		font-style: normal;
+		line-height: 20px;
 	}
 
 	.components-dropdown-menu__toggle {
@@ -295,12 +307,12 @@ a.hosting-overview__link-button {
 			display: none;
 		}
 
-		.domains-table__primary-domain-label {
-			margin: 0;
-		}
-
 		&:last-child {
 			border: 0;
 		}
 	}
+}
+
+.domains-table-row__actions-group {
+	font-family: "SF Pro Text", $sans;
 }
