--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -1,1 +1,7 @@
 // Add new Dotcom specific fly-out panel styles to this file
+.wpcom-site .a4a-layout-with-columns__container {
+	background: var(--color-sidebar-background);
+}
+.wpcom-site .main.a4a-layout.sites-dashboard.sites-dashboard__layout .sites-overview {
+	background: var(--studio-white);
+}
