--- a/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
@@ -14,6 +14,7 @@
 
 	.step-section-item__icon {
 		display: none;
+		opacity: 0.7;
 
 		@include break-large {
 			display: block;
@@ -26,6 +27,7 @@
 	}
 
 	.step-section-item__description {
+		margin-block-start: 4px;
 		font-size: rem(13px);
 		color: var(--color-accent);
 	}
@@ -33,27 +35,28 @@
 	.step-section-item__button {
 		margin-block-start: 16px;
 		margin-inline-start: auto;
-
-		button {
-			width: 100%;
-		}
-
-		@include break-large {
-			margin-block: auto;
-			display: flex;
-			gap: 16px;
-		}
 	}
 }
 
 .step-section-item__status {
-	margin-block-start: 8px;
+	margin-block-start: 16px;
+	width: 100%;
+	max-width: 200px;
 
-	&.badge--success {
+	@include break-large {
+		display: flex;
+		margin-block-start: 0;
+	}
+
+	.badge {
+		margin-left: auto;
+	}
+
+	.badge--success {
 		background-color: var(--color-success-5);
 		color: var(--color-success-80);
 	}
-	&.badge--warning {
+	.badge--warning {
 		background-color: var(--color-warning-5);
 		color: var(--color-warning-80);
 	}
