--- a/client/a8c-for-agencies/sections/referrals/primary/referrals-overview/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/primary/referrals-overview/style.scss
@@ -2,10 +2,15 @@
 	margin-block-start: 24px;
 	font-size: rem(24px);
 	margin-block-end: 48px;
+	font-weight: 600;
 }
 
 .referrals-overview__section-container {
 	display: flex;
 	flex-direction: column;
 	gap: 48px;
+}
+
+.referrals-layout .a4a-layout__body-wrapper {
+	max-width: 800px;
 }
