--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -1,7 +1,31 @@
-// Add new Dotcom specific fly-out panel styles to this file
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
+
+// Add new Dotcom specific styles to this file.
+.wpcom-site .main.sites-dashboard__layout {
+	.a4a-layout__header {
+		margin: auto;
+
+		@include break-medium {
+			margin: 0 auto 16px auto;
+		}
+
+		@include break-large {
+			margin: 0 auto 24px auto;
+		}
+	}
+}
+
+.wpcom-site .main.sites-dashboard__layout.preview-hidden {
+	.a4a-layout__top-wrapper {
+		padding-block-start: 0;
+	}
+}
+
 .wpcom-site .a4a-layout-with-columns__container {
 	background: var(--color-sidebar-background);
 }
+
 .wpcom-site .main.a4a-layout.sites-dashboard.sites-dashboard__layout .sites-overview {
 	background: var(--studio-white);
 }
