--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -48,7 +48,7 @@
 }
 
 .hosting-overview__plan-card-header,
-.hosting-overview__plan-price,
+.hosting-overview .hosting-overview__plan-price,
 .hosting-overview__plan-price-loading-placeholder {
 	display: flex;
 	margin-bottom: 8px;
@@ -148,7 +148,7 @@ a.hosting-overview__link-button {
 }
 
 @media ( max-width: $break-xlarge ) {
-	.hosting-overview__plan-price,
+	.hosting-overview .hosting-overview__plan-price,
 	.hosting-overview__plan-price-loading-placeholder {
 		margin-bottom: 4px;
 	}
