--- a/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
@@ -28,28 +28,51 @@
 
 	.step-section-item__description {
 		margin-block-start: 4px;
-		font-size: rem(13px);
+		font-size: rem(14px);
+		line-height: 1.7;
 		color: var(--color-accent);
 	}
 
 	.step-section-item__button {
 		margin-block-start: 16px;
 		margin-inline-start: auto;
+
+		.button {
+			width: 100%;
+			height: 40px;
+
+			@include break-large {
+				width: auto;
+				height: inherit;
+			}
+		}
 	}
 }
 
 .step-section-item__status {
-	margin-block-start: 16px;
-	width: 100%;
-	max-width: 200px;
 
-	@include break-large {
-		display: flex;
-		margin-block-start: 0;
+	&.is-small-screen {
+		display: block;
+		margin-block-end: 16px;
+
+		@include break-large {
+			display: none;
+		}
+	}
+
+	&.is-large-screen {
+		display: none;
+		width: 30%;
+
+		@include break-large {
+			display: flex;
+			margin-block-start: 0;
+		}
 	}
 
 	.badge {
 		margin-left: auto;
+		white-space: nowrap;
 	}
 
 	.badge--success {
@@ -59,5 +82,11 @@
 	.badge--warning {
 		background-color: var(--color-warning-5);
 		color: var(--color-warning-80);
+	}
+}
+
+.step-section-item__content {
+	@include break-large {
+		max-width: 70%;
 	}
 }
