--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -49,20 +49,25 @@
 }
 
 .hosting-overview__plan-card-header,
-.hosting-overview .hosting-overview__plan-price,
+.hosting-overview .hosting-overview__plan-price-wrapper,
 .hosting-overview__plan-price-loading-placeholder {
 	display: flex;
 	margin-bottom: 8px;
+}
+
+.hosting-overview .hosting-overview__plan-price {
+	display: flex;
+	align-items: center;
+}
+
+.hosting-overview__plan-price-wrapper {
+	align-items: center;
 }
 
 @media ( max-width: $break-xlarge ) {
 	.hosting-overview__plan-card-header {
 		margin-bottom: 4px;
 	}
-}
-
-.hosting-overview .hosting-overview__plan-price {
-	align-items: center;
 }
 
 .hosting-overview__plan-card-title {
@@ -73,7 +78,8 @@
 .hosting-overview__plan-price,
 .hosting-overview__plan-price .plan-price__currency-symbol,
 .hosting-overview__plan-price .plan-price__integer,
-.hosting-overview__plan-price .plan-price__fraction {
+.hosting-overview__plan-price .plan-price__fraction,
+.hosting-overview__plan-price-term {
 	color: var(--studio-gray-100);
 	font-family: "SF Pro", $sans;
 	font-size: rem(28px); //typography-exception
@@ -88,13 +94,6 @@
 	font-weight: 400;
 }
 
-.hosting-overview__plan-price .plan-price__term {
-	color: var(--studio-gray-100);
-	font-family: "SF Pro", $sans;
-	font-size: $font-body-extra-small;
-	line-height: 12px;
-}
-
 @media ( max-width: $break-xlarge ) {
 	.hosting-overview__plan-card-title {
 		font-size: $font-size-header-small;
@@ -105,15 +104,12 @@
 	.hosting-overview__plan-price,
 	.hosting-overview__plan-price .plan-price__currency-symbol,
 	.hosting-overview__plan-price .plan-price__integer,
-	.hosting-overview__plan-price .plan-price__fraction {
+	.hosting-overview__plan-price .plan-price__fraction,
+	.hosting-overview__plan-price-term {
 		font-size: rem(18px); //typography-exception
 		line-height: 26px;
 	}
 
-	.hosting-overview__plan-price .plan-price__term {
-		font-size: rem(9px);
-		line-height: 9px;
-	}
 }
 
 a.hosting-overview__link-button {
@@ -190,7 +186,7 @@ a.hosting-overview__link-button {
 }
 
 @media ( max-width: $break-xlarge ) {
-	.hosting-overview .hosting-overview__plan-price,
+	.hosting-overview .hosting-overview__plan-price-wrapper,
 	.hosting-overview__plan-price-loading-placeholder {
 		margin-bottom: 4px;
 	}
